@@ -18,6 +18,8 @@ Version 1.10.1 - Le Lorrain
   - Fixes call to GetParameters in the module API that would hide parameters from the help if the module was using the new InitializAdmin method.
   - Fixes postgres compatibility issue.
   - Fixes pagination bug in news admin interface when category is selected.
+  - Minor fix to upgrade in News.
+  - Fixes minor problem with Pageinfo class.
 
 Version 1.10 - Martinique
 -----------------------------
